--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Bitcoin Archive
 description: A Jekyll theme for documentation
 baseurl: "/bitcoin-archive" # the subpath of your site, e.g. /blog
-url: "https://pmarsceill.github.io" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://wakgill.github.io/bitcoin-archive" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
@@ -65,7 +65,7 @@ heading_anchors: true
 # Aux links for the upper right navigation
 aux_links:
   "Just the Docs on GitHub":
-    - "//github.com/pmarsceill/just-the-docs"
+    - "//github.com/wakgill/bitcoin-archive"
 
 # Makes Aux links open in a new tab. Default is false
 aux_links_new_tab: false
