--- a/_config.yml
+++ b/_config.yml
@@ -16,7 +16,7 @@
 title: Bitcoin Archive
 description: A Jekyll theme for documentation
 baseurl: "/bitcoin-archive" # the subpath of your site, e.g. /blog
-url: "https://wakgill.github.io/bitcoin-archive" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://wakgill.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
 permalink: pretty
 exclude: ["node_modules/", "*.gemspec", "*.gem", "Gemfile", "Gemfile.lock", "package.json", "package-lock.json",  "script/", "LICENSE.txt", "lib/", "bin/", "README.md", "Rakefile"
