--- a/_config.yml
+++ b/_config.yml
@@ -64,7 +64,7 @@ heading_anchors: true
 
 # Aux links for the upper right navigation
 aux_links:
-  "Just the Docs on GitHub":
+  "Bitcoin Archive on GitHub":
     - "//github.com/wakgill/bitcoin-archive"
 
 # Makes Aux links open in a new tab. Default is false
