--- a/_config.yml
+++ b/_config.yml
@@ -57,7 +57,7 @@ search:
   rel_url: true
   # Enable or disable the search button that appears in the bottom right corner of every page
   # Supports true or false (default)
-  button: true
+  button: false
 
 # Enable or disable heading anchors
 heading_anchors: true
