--- a/_config.yml
+++ b/_config.yml
@@ -14,7 +14,7 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Bitcoin Archive
-description: A Jekyll theme for documentation
+description: An archive of Satoshi Nakamoto's writings.
 baseurl: "/bitcoin-archive" # the subpath of your site, e.g. /blog
 url: "https://wakgill.github.io" # the base hostname & protocol for your site, e.g. http://example.com
 
